# RookGame

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  pull_request_template.md
.github/actions/build-action/: Dockerfile  action.yml
.github/workflows/: ccpp.yml  main.yml
.github/workflows/actions/build-action/: README.md  entrypoint.sh
actions/build-action/: README.md  action.yml
docs/: CONTRIBUTING.md
src/: appearancePage.cpp  appearancePage.h  bidDialog.cpp  bidDialog.h  bidDialog.ui  card.cpp  card.h  clickableCard.cpp  clickableCard.h  common.h  commonWidgets.cpp  commonWidgets.h  cpu.cpp  cpu.h  cpuPlayer.cpp  cpuPlayer.h  deck.cpp  deck.h  gameController.cpp  gameController.h  gameData.cpp  gameData.h  gameDatabase.cpp  gameDatabase.h  gameInfoWidget.cpp  gameInfoWidget.h  gameMenuWidget.cpp  gameMenuWidget.h  gamePage.cpp  gamePage.h  handInfo.cpp  handInfo.h  main.cpp  mainWidget.cpp  mainWidget.h  mainWindow.cpp  mainWindow.h  messageBox.cpp  messageBox.h  middleDialog.cpp  (+33 more)
